// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when listing resources: Header title 1`] = `
<span
  class="ant-page-header-heading-title"
  title="Groups List"
>
  Groups List
</span>
`;

exports[`renders correctly when listing resources: Search 1 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Jan27Test
</td>
`;

exports[`renders correctly when listing resources: Search 1 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: Search 1 page 1 3`] = `
<td
  class="ant-table-cell"
>
  4/27/2022
</td>
`;

exports[`renders correctly when listing resources: Search 1 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: Search 2 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Jan27
</td>
`;

exports[`renders correctly when listing resources: Search 2 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: Search 2 page 1 3`] = `
<td
  class="ant-table-cell"
>
  4/27/2022
</td>
`;

exports[`renders correctly when listing resources: Search 2 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 1 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Jan27Test
</td>
`;

exports[`renders correctly when listing resources: table row 1 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 1 page 1 3`] = `
<td
  class="ant-table-cell"
>
  4/27/2022
</td>
`;

exports[`renders correctly when listing resources: table row 1 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 1 page 2 1`] = `
<td
  class="ant-table-cell"
>
  Dispensing Bags for Tablets (s)
</td>
`;

exports[`renders correctly when listing resources: table row 1 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 1 page 2 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 1 page 2 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 2 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Jan27
</td>
`;

exports[`renders correctly when listing resources: table row 2 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 2 page 1 3`] = `
<td
  class="ant-table-cell"
>
  4/27/2022
</td>
`;

exports[`renders correctly when listing resources: table row 2 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 2 page 2 1`] = `
<td
  class="ant-table-cell"
>
  Dispensing Envelopes
</td>
`;

exports[`renders correctly when listing resources: table row 2 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 2 page 2 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 2 page 2 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 3 page 1 1`] = `
<td
  class="ant-table-cell"
>
  TEST group  1
</td>
`;

exports[`renders correctly when listing resources: table row 3 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 3 page 1 3`] = `
<td
  class="ant-table-cell"
>
  4/28/2022
</td>
`;

exports[`renders correctly when listing resources: table row 3 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 3 page 2 1`] = `
<td
  class="ant-table-cell"
>
  Disposable Gloves
</td>
`;

exports[`renders correctly when listing resources: table row 3 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 3 page 2 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 3 page 2 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 4 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Demo FHIR Groups
</td>
`;

exports[`renders correctly when listing resources: table row 4 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 4 page 1 3`] = `
<td
  class="ant-table-cell"
>
  6/27/2022
</td>
`;

exports[`renders correctly when listing resources: table row 4 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 4 page 2 1`] = `
<td
  class="ant-table-cell"
>
  Examination Gloves (Nitrile) Large
</td>
`;

exports[`renders correctly when listing resources: table row 4 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 4 page 2 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 4 page 2 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 5 page 1 1`] = `
<td
  class="ant-table-cell"
>
  ANC patients
</td>
`;

exports[`renders correctly when listing resources: table row 5 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 5 page 1 3`] = `
<td
  class="ant-table-cell"
>
  6/27/2022
</td>
`;

exports[`renders correctly when listing resources: table row 5 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 5 page 2 1`] = `
<td
  class="ant-table-cell"
>
  Examination Gloves (Nitrile) Medium
</td>
`;

exports[`renders correctly when listing resources: table row 5 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 5 page 2 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 5 page 2 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 6 page 1 1`] = `
<td
  class="ant-table-cell"
>
  ANC patients
</td>
`;

exports[`renders correctly when listing resources: table row 6 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 6 page 1 3`] = `
<td
  class="ant-table-cell"
>
  6/27/2022
</td>
`;

exports[`renders correctly when listing resources: table row 6 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 6 page 2 1`] = `
<td
  class="ant-table-cell"
>
  Examination Gloves (Nitrile) Small
</td>
`;

exports[`renders correctly when listing resources: table row 6 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 6 page 2 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 6 page 2 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 7 page 1 1`] = `
<td
  class="ant-table-cell"
>
  ANC patients
</td>
`;

exports[`renders correctly when listing resources: table row 7 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 7 page 1 3`] = `
<td
  class="ant-table-cell"
>
  6/27/2022
</td>
`;

exports[`renders correctly when listing resources: table row 7 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 7 page 2 1`] = `
<td
  class="ant-table-cell"
>
  Face Mask, Surgical
</td>
`;

exports[`renders correctly when listing resources: table row 7 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 7 page 2 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 7 page 2 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 8 page 1 1`] = `
<td
  class="ant-table-cell"
>
  TEST group 
</td>
`;

exports[`renders correctly when listing resources: table row 8 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 8 page 1 3`] = `
<td
  class="ant-table-cell"
>
  6/27/2022
</td>
`;

exports[`renders correctly when listing resources: table row 8 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 8 page 2 1`] = `
<td
  class="ant-table-cell"
>
  Face Shield (Flexible, Disposable)
</td>
`;

exports[`renders correctly when listing resources: table row 8 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 8 page 2 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 8 page 2 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 9 page 1 1`] = `
<td
  class="ant-table-cell"
>
  ANC patients
</td>
`;

exports[`renders correctly when listing resources: table row 9 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 9 page 1 3`] = `
<td
  class="ant-table-cell"
>
  7/14/2022
</td>
`;

exports[`renders correctly when listing resources: table row 9 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 9 page 2 1`] = `
<td
  class="ant-table-cell"
>
  Goggles
</td>
`;

exports[`renders correctly when listing resources: table row 9 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 9 page 2 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 9 page 2 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 10 page 1 1`] = `
<td
  class="ant-table-cell"
>
  ANC patients
</td>
`;

exports[`renders correctly when listing resources: table row 10 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 10 page 1 3`] = `
<td
  class="ant-table-cell"
>
  7/19/2022
</td>
`;

exports[`renders correctly when listing resources: table row 10 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 10 page 2 1`] = `
<td
  class="ant-table-cell"
>
  Hand sanitizer gel 250ml w/ pump
</td>
`;

exports[`renders correctly when listing resources: table row 10 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 10 page 2 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 10 page 2 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 11 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Paracetamol 100mg tablets
</td>
`;

exports[`renders correctly when listing resources: table row 11 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 11 page 1 3`] = `
<td
  class="ant-table-cell"
>
  8/5/2022
</td>
`;

exports[`renders correctly when listing resources: table row 11 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 11 page 2 1`] = `
<td
  class="ant-table-cell"
>
  Male Condoms
</td>
`;

exports[`renders correctly when listing resources: table row 11 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 11 page 2 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 11 page 2 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 12 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Amoxicillin 250mg tablets
</td>
`;

exports[`renders correctly when listing resources: table row 12 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 12 page 1 3`] = `
<td
  class="ant-table-cell"
>
  8/5/2022
</td>
`;

exports[`renders correctly when listing resources: table row 12 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 12 page 2 1`] = `
<td
  class="ant-table-cell"
>
  Microgynon
</td>
`;

exports[`renders correctly when listing resources: table row 12 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 12 page 2 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 12 page 2 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 13 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Zinc sulfate 20mg tablets
</td>
`;

exports[`renders correctly when listing resources: table row 13 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 13 page 1 3`] = `
<td
  class="ant-table-cell"
>
  8/5/2022
</td>
`;

exports[`renders correctly when listing resources: table row 13 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 13 page 2 1`] = `
<td
  class="ant-table-cell"
>
  Microlut
</td>
`;

exports[`renders correctly when listing resources: table row 13 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 13 page 2 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 13 page 2 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 14 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Male Condoms
</td>
`;

exports[`renders correctly when listing resources: table row 14 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 14 page 1 3`] = `
<td
  class="ant-table-cell"
>
  8/5/2022
</td>
`;

exports[`renders correctly when listing resources: table row 14 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 14 page 2 1`] = `
<td
  class="ant-table-cell"
>
  MNP
</td>
`;

exports[`renders correctly when listing resources: table row 14 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 14 page 2 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 14 page 2 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 15 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Female Condoms
</td>
`;

exports[`renders correctly when listing resources: table row 15 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 15 page 1 3`] = `
<td
  class="ant-table-cell"
>
  8/5/2022
</td>
`;

exports[`renders correctly when listing resources: table row 15 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 15 page 2 1`] = `
<td
  class="ant-table-cell"
>
  MUAC Strap
</td>
`;

exports[`renders correctly when listing resources: table row 15 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 15 page 2 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 15 page 2 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 16 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Artemether 20mg + Lumefatrine 120mg (1x6) Tablets
</td>
`;

exports[`renders correctly when listing resources: table row 16 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 16 page 1 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 16 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 16 page 2 1`] = `
<td
  class="ant-table-cell"
>
  Oral Rehydration Salt 20.5g/L
</td>
`;

exports[`renders correctly when listing resources: table row 16 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 16 page 2 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 16 page 2 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 17 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Artemether 20mg + Lumefatrine 120mg (2x6) Tablets
</td>
`;

exports[`renders correctly when listing resources: table row 17 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 17 page 1 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 17 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 17 page 2 1`] = `
<td
  class="ant-table-cell"
>
  Paracetamol 100mg Tablets
</td>
`;

exports[`renders correctly when listing resources: table row 17 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 17 page 2 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 17 page 2 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 18 page 1 1`] = `
<td
  class="ant-table-cell"
>
  Artesunate 100mg Suppository Strips
</td>
`;

exports[`renders correctly when listing resources: table row 18 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 18 page 1 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 18 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 18 page 2 1`] = `
<td
  class="ant-table-cell"
>
  PPE Suit - Coverall, L
</td>
`;

exports[`renders correctly when listing resources: table row 18 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 18 page 2 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 18 page 2 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 19 page 1 1`] = `
<td
  class="ant-table-cell"
>
  AS (25mg) + AQ (67.5mg) ( 2-11months) Tablets
</td>
`;

exports[`renders correctly when listing resources: table row 19 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 19 page 1 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 19 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 19 page 2 1`] = `
<td
  class="ant-table-cell"
>
  PPE Suit - Coverall, M
</td>
`;

exports[`renders correctly when listing resources: table row 19 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 19 page 2 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 19 page 2 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 20 page 1 1`] = `
<td
  class="ant-table-cell"
>
  AS (50mg) + AQ (135mg) ( 1-5years) Tablets
</td>
`;

exports[`renders correctly when listing resources: table row 20 page 1 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 20 page 1 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 20 page 1 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;

exports[`renders correctly when listing resources: table row 20 page 2 1`] = `
<td
  class="ant-table-cell"
>
  Rapid Diagnostic Test (RDT)
</td>
`;

exports[`renders correctly when listing resources: table row 20 page 2 2`] = `
<td
  class="ant-table-cell"
>
  <div>
    No
  </div>
</td>
`;

exports[`renders correctly when listing resources: table row 20 page 2 3`] = `
<td
  class="ant-table-cell"
>
  8/16/2022
</td>
`;

exports[`renders correctly when listing resources: table row 20 page 2 4`] = `
<td
  class="ant-table-cell"
>
  <span
    class="d-flex align-items-center"
  >
    <a
      href="/groups/list"
    >
      <button
        class="ant-btn ant-btn-link m-0 p-1"
        disabled=""
        type="button"
      >
        <span>
          Edit
        </span>
      </button>
    </a>
    <div
      class="ant-divider ant-divider-vertical"
      role="separator"
    />
    <span
      aria-label="more"
      class="anticon anticon-more ant-dropdown-trigger more-options"
      data-testid="action-dropdown"
      role="img"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        data-icon="more"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
        />
      </svg>
    </span>
  </span>
</td>
`;
